--- a/UserSignUp/package.json
+++ b/UserSignUp/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@angular/upgrade": "^5.0.0",
+    "angular2-jwt": "^0.2.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "express": "^4.14.0",
+    "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.12",
     "morgan": "~1.9.0",
@@ -33,8 +35,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
-    "zone.js": "^0.8.5",
-    "http-errors": "~1.6.2"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
