--- a/UserSignUp/package.json
+++ b/UserSignUp/package.json
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.12",
     "morgan": "~1.9.0",
+    "ng2-search-filter": "^0.4.7",
+    "ngx-order-pipe": "^2.0.1",
     "pug": "2.0.0-beta11",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
